# docpivot

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  Makefile  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_CONFIG.md  README.md  TESTING.md  TODO.md  mypy.ini  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
data/json/: 2025-07-03-Test-PDF-Styles.docling.json  2025-07-03-Test-PDF-Styles.lexical.json
data/pdf/: 2025-07-03-Test-PDF-Styles.docling.json
docpivot/: __init__.py  defaults.py  engine.py  engine_builder.py  extensibility.py  logging_config.py  validation.py  workflows.py
docpivot/io/: __init__.py  format_registry.py  plugins.py  testing.py  validation.py
docpivot/io/readers/: __init__.py  basereader.py  custom_reader_base.py  doclingjsonreader.py  exceptions.py  lexicaljsonreader.py  optimized_docling_reader.py  readerfactory.py
docpivot/io/serializers/: __init__.py  custom_serializer_base.py  lexicaldocserializer.py  optimized_lexical_serializer.py  serializerprovider.py
docpivot/performance/: __init__.py  benchmarks.py  edge_cases.py  memory_profiler.py  monitor.py
docs/: custom_reader_guide.md  extensibility_guide.md  prd.md  troubleshooting.md
examples/: __init__.py  advanced_usage.py  basic_usage.py  builder_pattern.py  end_to_end_workflows_example.py  format_detection_example.py  lexical_advanced_features_demo.py  pdf_conversion.py  performance_showcase.py
examples/advanced_usage/: batch_processing.py  custom_serializers.py  performance_optimization.py
examples/basic_usage/: basic_markdown_export.py  custom_picture_serializer.py  customized_markdown_export.py  lexical_export.py
examples/custom_formats/: __init__.py  example_plugin.py  xml_reader.py  yaml_serializer.py
examples/integration_examples/: custom_readers.py
issues/: DOCPIVOT_000001_project_setup.md  DOCPIVOT_000002_base_reader.md  DOCPIVOT_000003_docling_json_reader.md  DOCPIVOT_000004_lexical_json_reader.md  DOCPIVOT_000005_serializer_integration.md  DOCPIVOT_000006_lexical_serializer_core.md  DOCPIVOT_000007_format_detection.md  DOCPIVOT_000008_end_to_end_workflows.md  DOCPIVOT_000009_comprehensive_testing.md  DOCPIVOT_000010_lexical_serializer_advanced.md  DOCPIVOT_000014_extensibility_patterns.md  DOCPIVOT_000015_final_integration_polish.md
issues/complete/: DOCPIVOT_000001_project_setup.md  DOCPIVOT_000003_docling_json_reader.md  DOCPIVOT_000006_lexical_serializer_core.md  DOCPIVOT_000008_end_to_end_workflows.md
issues_backup_20250826_131631/: DOCPIVOT_000011_error_handling_validation.md  DOCPIVOT_000012_examples_documentation.md  DOCPIVOT_000013_performance_optimization.md
issues_backup_20250826_131631/complete/: DOCPIVOT_000009_comprehensive_testing.md
specification/: DOCLING_V1.7.0_MIGRATION.md  docpivot-v1.7.0-support-spec.md  docpivot_implementation_completed.md  docpivot_implementation_plan.md  index.md
tests/: __init__.py  conftest.py  test_basereader.py  test_builders_and_configs.py  test_core_functionality.py  test_custom_reader_base.py  test_custom_serializer_base.py  test_doclingjsonreader.py  test_doclingjsonreader_coverage.py  test_docpivot_engine.py  test_edge_cases_coverage.py  test_error_handling_comprehensive.py  test_exceptions.py  test_extensibility.py  test_format_registry.py  test_integration.py  test_io_validation.py  test_lexical_advanced_features.py  test_lexical_integration.py  test_lexicaldocserializer.py  test_lexicaljsonreader.py  test_logging_config.py  test_optimized_docling_reader.py  test_performance_benchmarks.py  test_performance_init.py  test_performance_optimization.py  test_plugins.py  test_prd_examples.py  test_readerfactory.py  test_readers_with_sample_data.py  test_serializerprovider.py  test_serializers_with_sample_data.py  test_testing_framework.py  test_workflows.py  test_workflows_comprehensive.py
